--- a/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
+++ b/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
@@ -9,7 +9,7 @@
   <div class="formoredetailssee">On this page we present the methotrexate degradation pathway in more details.</div>
   <p class="spacemaker"></p>
 
-  <h1>Design of the methotrexate transformation pathway</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Design of the methotrexate transformation pathway</h1>   </div>
 
   <mat-card class="eatintotextmargin">
     <img src="http://2018.igem.org/wiki/images/f/f3/T--GO_Paris-Saclay--degrad_complete_chemical.png" class="wideimg">
@@ -42,18 +42,18 @@
     factory’. Moreover we needed an indicative strain to easily monitor MTX biotransformation.
   </p><p>
   We decided to take advantage of the availability in our lab of the Keio collection <reference-box shorthand="Baba2006"></reference-box> to test the
-  growth of several <i>E. coli</i> K12 mutants (&Delta;<i>acrA1</i>, &Delta;<i>acrB</i>, &Delta;<i>abgT</i>, &Delta;<i>tolC</i>) in presence of MTX (Figure 2).
+  growth of several <i>E. coli</i> K12 mutants (&Delta;<i>acrA</i>, &Delta;<i>acrB</i>, &Delta;<i>abgT</i>, &Delta;<i>tolC</i>) in presence of MTX (Figure 2).
 </p>
 
   <p class="intermediateconclusion">
-    <b>Main conclusions</b>: The WT strain may constitute a suitable ‘MTX-resistant chassis’, whereas &Delta;<i>acrA1</i> and &Delta;<i>tolC</i> strains could constitute MTX-sensitive indicative
+    <b>Main conclusions</b>: The WT strain may constitute a suitable ‘MTX-resistant chassis’, whereas &Delta;<i>acrA</i> and &Delta;<i>tolC</i> strains could constitute MTX-sensitive indicative
     strains as well as chassis accumulating MTX. Since TolC is a general efflux pump component involved in a large panel of compound efflux
     (even in standard LB growth conditions), we thought it could be interesting to also evaluate its general interest as a chassis sequestrating MTX
-    (and possibly other toxic molecules). Finally, the &Delta;<i>acrA1</i> mutant was used as an indicative strain for further bioassays since it presents no growth
+    (and possibly other toxic molecules). Finally, the &Delta;<i>acrA</i> mutant was used as an indicative strain for further bioassays since it presents no growth
     defect in absence of MTX.
   </p>
 
-  <h1>Expression vector design</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Expression vector design</h1>   </div>
   <mat-card class="sidefigure">
     <img src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--folC_cpg2_pSB1C3.png" class="wideimg">
     <div class="mat-caption captionafterapicture">Figure 3 : The <i>folC</i>-<i>cpg2</i> encoding plasmid present within the MTX ‘Cleaning Factory’</div>
@@ -86,7 +86,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
       <h4 mat-line>Residual toxicity bioassays</h4>
-      <p mat-line> Analyzing the growth of the &Delta;<i>acrA1</i> indicative strain in presence of a set of supernatants containing MTX and incubated or not with the ‘Cleaning Factories’ </p>
+      <p mat-line> Analyzing the growth of the &Delta;<i>acrA</i> indicative strain in presence of a set of supernatants containing MTX and incubated or not with the ‘Cleaning Factories’ </p>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
@@ -107,7 +107,7 @@
         and were precultured overnight under agitation at 37°C in 4 ml of LB supplemented with 30 µg/ml chloramphenicol.
         Thereafter, the chassis strains were inoculated at an opacimetry of 0.2 (DO600nm) in LB medium containing and 0.5 mM
         IPTG and 0.2 % arabinose and either 2% DMSO (‘control condition’) or 514 µM MTX (‘MTX condition’). Five or 24 h after
-        shaking at 37°C, the samples were harvested, centrifuged and the supernatants filtered before being tested on the  &Delta;<i>acrA1</i>
+        shaking at 37°C, the samples were harvested, centrifuged and the supernatants filtered before being tested on the  &Delta;<i>acrA</i>
         indicative strain or submitted to HPLC analysis. </div>
     </div>
   </mat-card>
@@ -115,10 +115,10 @@
   <p class="spacemaker"></p>
   <mat-card class="eatintotextmargin">
     <img src="http://2018.igem.org/wiki/images/4/41/T--GO_Paris-Saclay--viability_assay.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 5.1: MTX-bioassay using <i>E. coli</i> &Delta;<i>acrA1</i> mutant as an indicative strain
+    <div class="mat-caption captionafterapicture">Figure 5.1: MTX-bioassay using <i>E. coli</i> &Delta;<i>acrA</i> mutant as an indicative strain
       <br>
       <div class="captionmaterialmethod">
-        The &Delta;<i>acrA1</i> indicative strain was precultured overnight under agitation at 37°C in 4 ml of LB medium. The culture was
+        The &Delta;<i>acrA</i> indicative strain was precultured overnight under agitation at 37°C in 4 ml of LB medium. The culture was
         diluted in LB medium to obtain a ‘2X-culture’ at an initial OD<sub>600nm</sub> of 0.04. Fifty µl of this ‘2X-culture’ were inoculated
         in a in a 96-well plate. Fifty µl per well of supernatants filtrated after ‘MTX biotransformation assays’ performed
         during 20 h (Figure 4) were added to this ‘2X-culture’ (so that the initial OD was 0.02 and the MTX concentration
@@ -134,7 +134,7 @@
   <p class="spacemaker"></p>
   <p class="intermediateconclusion">
     <b>Main conclusions for the bioassay</b>: The MTX supernatants incubated during 20 h with the chassis strains (WT or ∆<i>tolC</i>) harboring a plasmid encoding <i>cpg2</i> under
-    the control of lac promoter (pSB1C3-<i>cpg2</i> or pSB1C3-<i>folC</i>-<i>cpg2</i>) are not toxic anymore against the &Delta;<i>acrA1</i> indicative strain
+    the control of lac promoter (pSB1C3-<i>cpg2</i> or pSB1C3-<i>folC</i>-<i>cpg2</i>) are not toxic anymore against the &Delta;<i>acrA</i> indicative strain
     (Figure 5.1). The best growth yields of the indicative strains are observed when the « Cleaning Factory » is the ∆<i>tolC</i> mutant
     harboring pSB1C3-<i>folC</i>-<i>cpg2</i>.
   </p>
@@ -143,11 +143,11 @@
   <p>To eliminate possible confounding factors affecting bacterial growth, we performed HPLC analysis of our samples (Figure 5.2).
     This revealed that MTX is removed from the culture medium in presence of bacteria harboring <i>cpg2</i> encoding plasmids as early as
     5 h post-incubation. Of note, the supernatants incubated only 5h with the chassis were tested but still present some
-    toxicity against the &Delta;<i>acrA1</i> indicative strain (data not shown). We hypothesize that waiting longer (20 h) allow the
+    toxicity against the &Delta;<i>acrA</i> indicative strain (data not shown). We hypothesize that waiting longer (20 h) allow the
     bacteria to remove a toxic compound from the medium. </p>
 
 
-  <h1>HPLC analysis</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>HPLC analysis</h1>   </div>
 
   <p>
     While our bioassay results prove that there is no bacteriostatic activity left in the filtrate, this does not
@@ -228,7 +228,7 @@
     <img src="http://2018.igem.org/wiki/images/0/0f/T--GO_Paris-Saclay--typ_hplc_res.png" class="wideimg">
     <div class="mat-caption captionafterapicture">Figure 12: Comparison of MTX standard, filtrate from control culture
       (WT pSB1C3-tet)
-      and ‘MTX-Cleaning factory’ culture (WT pSB1C3-folC-cpg2) after 5 h incubation
+      and ‘MTX-Cleaning factory’ culture (WT pSB1C3-folC-<i>cpg2</i>) after 5 h incubation
     </div>
   </mat-card>
 
@@ -250,7 +250,7 @@
            class="hplcframe">
     </div>
     <div class="mat-caption captionafterapicture">Figure 14: Filtrate from ‘MTX-Cleaning factory’ culture (WT
-      pSB1C3-folC-cpg2) after 20 h incubation
+      pSB1C3-<i>folC</i>-<i>cpg2</i>) after 20 h incubation
     </div>
   </mat-card>
 
@@ -282,7 +282,7 @@
            class="hplcframe">
     </div>
     <div class="mat-caption captionafterapicture">Figure 15: Filtrate from ‘MTX-Cleaning factory’ culture (ΔtolC
-      pSB1C3-folC-cpg2) after 5 h incubation
+      pSB1C3-<i>folC</i>-<i>cpg2</i>) after 5 h incubation
     </div>
   </mat-card>
 
@@ -292,14 +292,14 @@
   <app-chromato-explorer></app-chromato-explorer>
   <p class="spacemaker"></p>
 
-  <h1>Discussion</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Discussion</h1>   </div>
   <p>
     Our HPLC assay protocol proved well suited to our purpose, considering the remarkable lack of interference from
     either LB components, metabolic by-products or DMSO at the chosen wavelength. This validates the method as an easy
     to use assay for MTX in bacterial cell culture.
   </p>
   <p>
-    Bacteria without cpg2 transgene do not biotransform MTX, excluding an intrinsic MTX-degradation ability of E. coli.
+    Bacteria without <i>cpg2</i> transgene do not biotransform MTX, excluding an intrinsic MTX-degradation ability of E. coli.
   </p>
   <p>
     In contrast, the expression of CPG2 has a profound effect: the MTX peak almost completely disappears, giving way to
@@ -327,7 +327,7 @@
   <p class="intermediateconclusion">
     <b>Main conclusions for the HPLC analysis</b>: MTX is removed from the culture medium in presence of bacteria harboring <i>cpg2</i>
     encoding plasmids as early as 5 h post-incubation. Of note, the supernatants incubated only 5h with the chassis were
-    tested but still present some toxicity against the ∆<i>acrA1</i> indicative strain (data not shown). We hypothesize that waiting
+    tested but still present some toxicity against the ∆<i>acrA</i> indicative strain (data not shown). We hypothesize that waiting
     longer (20 h) allow the bacteria to remove a toxic compound from the medium.
   </p>
 
