--- a/src/app/biology-section/interlab/interlab.component.html
+++ b/src/app/biology-section/interlab/interlab.component.html
@@ -17,7 +17,7 @@
       <img src="http://2018.igem.org/wiki/images/2/2d/T--GO_Paris-Saclay--tab1bon.png" class="wideimg">
     </div>
 
-    <h1>Calibration protocols</h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Calibration protocols</h1>   </div>
     <h2>Calibration 1 : OD<sub>600</sub> Reference point - LUDOX protocol</h2>
     <p>We added 100 &mu;L of LUDOX into wells A1, B1, C1, D1 and 100 &mu;L of dd H<sub>2</sub>O into wells A2, B2, C2, D2.
       We measured absorbance at 600 nm of all samples.</p>
@@ -129,7 +129,7 @@
     </div>
     <img class="wideimg" src="http://2018.igem.org/wiki/images/4/43/T--GO_Paris-Saclay--tableau7.png">
 
-    <h1>Cell measurement protocol</h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Cell measurement protocol</h1>   </div>
 
     <p>We have at our disposal following devices from iGEM Distribution Kit, all in pSB1C3 backbone and from Kit Plate 7&nbsp;: </p>
 
@@ -343,7 +343,7 @@
 
     <hr style="page-break-before:always;display:none;">
     <p class="c5 c26"></p>
-    <h1>Colony forming units per 0.1 OD600&nbsp;E. coli&nbsp;cultures </h1>
+    <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Colony forming units per 0.1 OD600&nbsp;E. coli&nbsp;cultures </h1>   </div>
     <h2>Step 1&nbsp;: Starting sample preparation</h2>
     <p id="h.gjdgxs"></p>
     
