--- a/src/app/biology-section/parts-collection/parts-collection.component.html
+++ b/src/app/biology-section/parts-collection/parts-collection.component.html
@@ -9,7 +9,7 @@
 <mat-card class="dashboard-card largemargin">
   <p class="spacemaker"></p>
 
-  <h1>The HeteroGenious device: LEE5 & Ler collection</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>The HeteroGenious device: LEE5 & Ler collection</h1>   </div>
 
   <p class="spacemaker"></p>
   <h2>Context</h2>
@@ -166,7 +166,7 @@
     introduce LEE5 region and Ler in our E. coli chassis to build the ‘HeteroGenious’ system.</p>
 
   <p>In one hand, several versions of Ler encoding gene have been cloned in pSB1C3 under the control of tet promoter
-    (<a href="http://parts.igem.org/Part:BBa_K2688022">BBa_K2688022</a>, <a href="http://parts.igem.org/Part:BBa_K2688023">BBa_K2688023</a>, <a href="http://parts.igem.org/Part:BBa_K2688024">BBa_K2688024</a>). On the other hand, we analyzed the expression of gfp under the control of
+    (<a href="http://parts.igem.org/Part:BBa_K2688022">BBa_K2688022</a>, <a href="http://parts.igem.org/Part:BBa_K2688023">BBa_K2688023</a>, <a href="http://parts.igem.org/Part:BBa_K2688024">BBa_K2688024</a>). On the other hand, we analyzed the expression of <i>gfp</i> under the control of
   LEE5 promoter as proof of concept. Since all these LEE5 and Ler biobricks are cloned within the same vector (pSB1C3
     backbone vector), we had to use specific genetic backgrounds to characterized LEE5 (<i>E. coli</i> K12 ∆<i>hns</i> and EPEC Δ<i>ler</i>) or
     Ler (MG1655Z1 containing an integrated copy of LEE5-<i>gfp</i> reporter without antibiotic resistance) Biobricks.</p>
@@ -181,7 +181,7 @@
       <mat-card-title>LEE5 promoter series</mat-card-title>
       <mat-card-subtitle>LEE5 &mdash; BBa_K2688010 to BBa_K2688018</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler, which allows for
+    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and Ler, which allows for
       heterogeneous expression
       of downstream gene. Several variants are available, with design implications.
     </mat-card-content>
@@ -199,7 +199,7 @@
   <mat-card class="z-depth" class="part-card">
     <mat-card-header>
       <mat-card-title>Ler regulator series</mat-card-title>
-      <mat-card-subtitle>ler &mdash; BBa_K2688019 to BBa_K2688021</mat-card-subtitle>
+      <mat-card-subtitle><i>ler</i> &mdash; BBa_K2688019 to BBa_K2688021</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>A transcription regulator protein that binds to LEE5 promoter sites, counteracting H-NS silecing
       and allowing transcription.
