--- a/src/app/biology-section/parts/j23108/j23108.component.html
+++ b/src/app/biology-section/parts/j23108/j23108.component.html
@@ -7,7 +7,7 @@
 
 <mat-card class="dashboard-card largemargin" >
   <p class="spacemaker"></p>
-  <h1>Improving a BioBrick from the Anderson promoter collection</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Improving a BioBrick from the Anderson promoter collection</h1>   </div>
 
   <mat-card class="sidefigure">
     <img src="http://2018.igem.org/wiki/images/9/91/T--GO_Paris-Saclay--recap_bistable.png" class="wideimg">
@@ -33,13 +33,13 @@
     This promoter collection is well characterized and suitable to allow transgene expression in a large range of levels,
     enabling the finding of a particular level of expression suitable for a given application.
     The promoters are included in the Registry distribution. All parts except BBa_J23119 are present in plasmid <a href="http://parts.igem.org/wiki/index.php/Part:BBa_J61002">BBa_J61002</a>.
-    This places the rfp transgene downstream of the promoter. Part BBa_J23119 is present in pSB1A2. <b>Four Anderson promoters
+    This places the <i>gfp</i> transgene downstream of the promoter. Part BBa_J23119 is present in pSB1A2. <b>Four Anderson promoters
     are cloned within pSB1C3 and available in the Distribution Kit 2018.</b>
   </p>
 
   <h2>Characterization of the Anderson promoters cloned within pSB1C3</h2>
   <p>
-  In our case, we wanted to clone ler gene under the control of different Anderson promoters within pSB1C3 plasmid backbone
+  In our case, we wanted to clone <i>ler</i> gene under the control of different Anderson promoters within pSB1C3 plasmid backbone
     (as required for the iGEM competition). The four Anderson promoters are cloned within pSB1C3 and available in the Distribution
     Kit 2018 are the following:
   </p>
