--- a/src/app/biology-section/parts/lee5/lee5.component.html
+++ b/src/app/biology-section/parts/lee5/lee5.component.html
@@ -14,7 +14,7 @@
       <mat-card-title>LEE5 promoter series</mat-card-title>
       <mat-card-subtitle>LEE5 &mdash; BBa_K2688010 to BBa_K2688018</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler, which allows for
+    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and Ler, which allows for
       heterogeneous expression
       of downstream gene. Several variants are available, with design implications.
     </mat-card-content>
@@ -28,7 +28,7 @@
   </mat-card>
   <p class="spacemaker"></p>
 
-  <h1>Introduction</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Introduction</h1>   </div>
 
   <p class="withlettrine">
     For our project, we used only a small part of the island containing the promoter region of the 5th operon, named
@@ -49,7 +49,7 @@
     fragment.
   </p>
 
-  <h1>Cloning of P<sub><i>LEE5</i></sub> region based-Biobricks</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Cloning of P<sub><i>LEE5</i></sub> region based-Biobricks</h1>   </div>
 
   <p>The <i>LEE5</i>-<i>gfp</i> reporter cassette used in Leh et al.
     <reference-box shorthand="Leh2017"></reference-box>
@@ -102,12 +102,11 @@
   <p>All plasmid were checked by enzymatic digestion and sequencing.</p>
 
 
-  <h1>Procedure of analysis of <i>gfp</i> expression under the control of <i>LEE5</i></h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Procedure of analysis of <i>gfp</i> expression under the control of <i>LEE5</i></h1>   </div>
 
   <p>To analyse the regulation by H-NS and Ler of <i>LEE5</i>-based Biobricks, we used <i>E. coli</i> K12 MG1655 Z1 <i>hns</i>
     proficient or
-    deficient strains and EPEC <i>ler</i> proficient and deficient strains as previously described (Leh, Khodr et al.
-    2017).
+    deficient strains and EPEC <i>ler</i> proficient and deficient strains as previously described.
     Chemically competent K12 strains were transformed by either BBa_K2688012, BBa_K2688014, BBa_K2688016, BBa_K2688018
     or
     BBa_K2688027. EPEC strains were transformed only with BBa_K2688012. The transformed cloned were selected on
@@ -125,7 +124,7 @@
     anhydro<i>tet</i>racyclin (aTc, 100 ng/ml).</p>
 
 
-  <h1>Results</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Results</h1>   </div>
   <mat-card class="sidefigure">
     <img src="http://2018.igem.org/wiki/images/3/34/T--GO_Paris-Saclay--1_microfluo.png" class="wideimg">
     <div class="mat-caption captionafterapicture">Figure 1: Fluorescent microscopy of <i>E. coli</i> K12 MG1655Z1
@@ -172,7 +171,7 @@
     under suitable
     conditions</b>.
   </p>
-  <p>x
+  <p>
     Of note, we observe that <i>tet</i> promoter is slightly silenced by H-NS (only 2-fold repression) and insensitive
     to H-NS
     level under activating (aTc) condition. <b>Moreover, there is a basal <i>gfp</i> expression from
@@ -255,7 +254,7 @@
       <div class="captionmaterialmethod">
         WT EPEC and Δ<i>ler</i> strains containing the pSB1C3-LEE5_GFP_native (BBa_K2688012) plasmid were cultured at
         37°C in
-        LB. The Δler EPEC strain containing the pKK-gfp plasmid (without promoter upstream the <i>gfp</i> gene, «CTL» –
+        LB. The Δler EPEC strain containing the pKK-<i>gfp</i> plasmid (without promoter upstream the <i>gfp</i> gene, «CTL» –
         ref:
         Leh et al. 2017) was used as a negative control of fluorescence. In stationary phase (24 h), GFP expression was
         determined by flow cytometric analysis. On the left, the pattern of <i>gfp</i> expression is presented for one
@@ -268,7 +267,7 @@
   </mat-card>
 
 
-  <h1>Characterization of <i>LEE5</i> variants</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Characterization of <i>LEE5</i> variants</h1>   </div>
 
   <p>To obtain a <b>collection of vectors</b> derived from <i>LEE5</i>, we generated pSB1C3-RBS-<i>gfp</i> (BBa_E0240)
     based
