--- a/src/app/biology-section/parts/ler/ler.component.html
+++ b/src/app/biology-section/parts/ler/ler.component.html
@@ -39,7 +39,7 @@
   </p>
   <p class="spacemaker"></p>
 
-  <h1>Introduction</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Introduction</h1>   </div>
 
   <p class="withlettrine">
     Ler (LEE-encoded regulator) belongs to the H-NS family of xenogeneic silencers. This protein is encoded by the LEE
@@ -95,11 +95,11 @@
   </mat-card>
 
 
-  <h1>Cloning of Ler biobricks</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Cloning of Ler biobricks</h1>   </div>
 
   <p>The native <i>ler1</i> gene contains forbidden sites. Therefore, we designed an optimized version of this gene
     (devoid of
-    forbidden restriction sites). This ler1 version was synthetized downstream a synthetic RBS and cloned within
+    forbidden restriction sites). This <i>ler1</i> version was synthetized downstream a synthetic RBS and cloned within
     pSB1C3-<i>tetO</i> (<a href="http://parts.igem.org/Part:BBa_R0040">BBa_R0040</a>), generating pSB1C3_<i>tetO</i>_RBS_<i>ler1</i>
     (<a href="http://parts.igem.org/Part:BBa_K2688022">BBa_K2688022</a>).</p>
   <p>To construct pSB1C3_ RBS_<i>ler</i>_2 (<a href="http://parts.igem.org/Part:BBa_K2688019">BBa_K2688019</a>), the
@@ -120,7 +120,7 @@
     (<a href="http://parts.igem.org/Part:BBa_K2688024">BBa_K2688024</a>).
   </p>
 
-  <h1>Procedure of analysis of Ler activity on <i>LEE5</i>-gfp expression cassette</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Procedure of analysis of Ler activity on <i>LEE5</i>-<i>gfp</i> expression cassette</h1>   </div>
 
   <p>To analyse the regulation of <i>LEE5</i> by ler based-biobricks, we used <b></b><i>E. coli</i> K12 MG1655 Z1
     <i>att</i>Phi80Ω<i>LEE5</i>-<i>gfp</i> reporter strain harboring single integrated copy of the <i>LEE5</i>-gfp
@@ -137,13 +137,13 @@
     <reference-box shorthand="Leh2017"></reference-box>
     . Chemically competent MG1655 Z1 <i>att</i>Phi80Ω<i>LEE5</i>-<i>gfp</i>
     bacteria were transformed with pSB1C3-<i>tet</i>-RBS-<i>ler1</i> (<a href="http://parts.igem.org/Part:BBa_K2688022">BBa_K2688022</a>),
-    pSB1C3-tet-RBS-ler2
+    pSB1C3-tet-RBS-<i>ler</i>2
     (<a href="http://parts.igem.org/Part:BBa_R0040">BBa_K2688023</a>),
     pSB1C3-<i>tet</i>-RBS-<i>ler3</i> (<a href="http://parts.igem.org/Part:BBa_K2688024">BBa_K2688024</a>) or the
     control
     plasmid pSB1C3-tet (<a href="http://parts.igem.org/Part:BBa_R0040">BBa_R0040</a>) and selected on chloramphenicol
     (30
-    µg/ml). The expression of ler genes was induced by adding anhydrotetracyclin (aTc, 1 to 100 ng/ml) to the medium.
+    µg/ml). The expression of <i>ler</i> genes was induced by adding anhydrotetracyclin (aTc, 1 to 100 ng/ml) to the medium.
     After 24 h growth at 37°C, bacteria fluorescence was assessed by flow cytometry using a Cytoflex S apparatus (<i>Beckman
       Coulter</i>). Mg1655 Z1 harboring pZA31-MCS plasmid
     <reference-box shorthand="Lutz1997"></reference-box>
@@ -157,7 +157,7 @@
       strain
       <br><br>
       <div class="captionmaterialmethod">
-        A. <b>Genetic organization of J118-<i>LEE5</i>-gfp plasmid</b> used to obtain the strain. This plasmid must be
+        A. <b>Genetic organization of J118-<i>LEE5</i>-<i>gfp</i> plasmid</b> used to obtain the strain. This plasmid must be
         produced
         in
         PIR1 bacteria (which can replicate R6K origin). While the expression cassette is surrounded by the Biobrick
@@ -185,7 +185,7 @@
     </div>
   </mat-card>
 
-  <h1>Results</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Results</h1>   </div>
 
   <p>As illustrated on <b>Figure 3</b>, we observed that MG1655 Z1 <i>att</i>Phi80Ω<i>LEE5</i>-<i>gfp</i> presents a
     very low basal fluorescence [as
@@ -206,7 +206,7 @@
     <mat-list-item>
       <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
       <p mat-line>There is a basal expression of ler transgene under the control of tet (as directly measured with
-        pSB1C3-tet-gfp
+        pSB1C3-tet-<i>gfp</i>
         (BBa_K1493504) (see also <a
           (click)="this.router.navigate(['/biology/lee5'], { fragment: 'fig2'})">this figure</a>)
       </p>
@@ -218,7 +218,7 @@
         vector (≈100 copies/cell)</p></mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
-      <p mat-line>A very low level of expression of Ler1 is sufficient to strongly activate attPhi80Ω<i>LEE5</i>-gfp
+      <p mat-line>A very low level of expression of Ler1 is sufficient to strongly activate attPhi80Ω<i>LEE5</i>-<i>gfp</i>
         single copy</p>
     </mat-list-item>
     <mat-list-item>
@@ -230,7 +230,7 @@
 
   <p>When increasing Ler1 expression by addition of a range of aTc, we did not observe a huge change on <i>LEE5</i>
     activity,
-    suggesting that <i>LEE5</i>-gfp expression is already almost maximal with a basal expression of ler1 from pSB1C3.
+    suggesting that <i>LEE5</i>-<i>gfp</i> expression is already almost maximal with a basal expression of <i>ler1</i> from pSB1C3.
     Interestingly, the increase of Ler2 and Ler3 expressions resulted in an increase of <i>LEE5</i>-<i>gfp</i>
     expression for the lowest
     tested concentrations of aTc (1 and 5 ng/ml). This indicates that Ler2 is active, but much less effective than Ler1
@@ -250,7 +250,7 @@
 
   <mat-card class="normalmargin">
     <img src="http://2018.igem.org/wiki/images/d/d5/T--GO_Paris-Saclay--3_Ler123_LEE5-GFP.png" class="wideimg">
-    <div class="mat-caption captionafterapicture">Figure 3: Effect of Ler1, Ler2 and Ler3 on LEE5-gfp expression level
+    <div class="mat-caption captionafterapicture">Figure 3: Effect of Ler1, Ler2 and Ler3 on LEE5-<i>gfp</i> expression level
       <br>
       <div class="captionmaterialmethod">
         The mean intensity of fluorescence (in arbitrary units, A.U.) of <i>E. coli</i> MG1655Z1 <i>att</i>Phi80Ω<i>LEE5</i>-<i>gfp</i>  reporter
