--- a/src/app/biology-section/bio-details/heterogenious/heterogenious.component.html
+++ b/src/app/biology-section/bio-details/heterogenious/heterogenious.component.html
@@ -8,7 +8,7 @@
 
 <mat-card class="dashboard-card largemargin">
 <p class="spacemaker"></p>
-  <h1>Context</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Context</h1>   </div>
 
   <p>Non-genetic phenotypic heterogeneity is present in large-scope in bacterial population. In
   enteropathogenic Escherichia coli (EPEC), the expression of the locus of enterocyte effacement (LEE) pathogenicity
@@ -146,11 +146,11 @@
     biotranformation pathway and other that will not and will ensure bacterial renewal within a bioreactor.</p>
 
 
-  <h1>Toward a ‘HeteroGenious’ expression of BioBricks</h1>
+  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Toward a ‘HeteroGenious’ expression of BioBricks</h1>   </div>
 
   <p>
-    While analysing the growth of our chassis strain (WT and &Delta;tolC strain) in absence or presence of MTX, we
-    noticied that the strains harboring pSB1C3-folC-cpg2 present a growth delay/defect.
+    While analysing the growth of our chassis strain (WT and &Delta;<i>tolC</i> strain) in absence or presence of MTX,
+    we noticed that the strains harboring pSB1C3-<i>folC</i>-<i>cpg2</i> present a growth delay/defect.
     More generally, BioBrick expression and/or drug degradation may be toxic for the chassis strains, and can be
     detrimental
     for the long term maintenance of a cleaning bioreactor ;
@@ -158,7 +158,6 @@
     life,
     likely to be conserved from bacteria to man.
   </p>
-
   <p>
     Therefore we wanted our bioreactor to harbor a heterogeneous bacterial population so that all of them will not
     express
@@ -168,40 +167,72 @@
 
   <p>
     We took advantage of a recently described regulation system that can generate bimodal
-    expression patterns in E. coli
+    expression patterns in <i>E. coli</i>
     <reference-box shorthand="Leh2017"></reference-box>
-    . Only two components are required to
-    implement this ‘heterogenious’ system in E. coli: LEE5 promoter region and the gene encoding
-    Ler (‘LEE encoded regulator’). Ler is a nucleoid associated protein encoded by LEE (locus of enterocyte effacement)
-    genomic island encoding a secretion system in enteropathogenic E. coli. For the project, we used ler and its target
-    DNA,
-    a small part of LEE island containing the promoter region of the 5th operon, named LEE5. This region has been shown
-    to
-    be recognized by two nucleoid-associated proteins, H-NS and Ler.  H-NS and Ler belong to the same family of protein
-    of
-    proteins qualified as ‘silencers’ of foreign DNA expression, the H-NS family. However, it has been reported that Ler
-    can
-    counteract the H-NS silencing on the LEE island. Therefore, the competition between H-NS and Ler for LEE5 binding
-    can
-    generate some heterogeneity of transgene expression within E. coli populations
+    . Only two components must be provided to
+    implement this ‘heterogenious’ system in <i>E. coli</i>: <i>LEE5</i> promoter region and the gene encoding
+    Ler (‘LEE encoded regulator’). The <i>E. coli</i> endogeneous H-NS silencer also plays a part in the system : the
+    competition between H-NS and Ler for <i>LEE5</i> binding can
+    generate some heterogeneity of transgene expression within <i>E. coli</i> populations
     <reference-box shorthand="Leh2017"></reference-box>
     (Figure 8).
   </p>
   <p>
-    Since H-NS is naturally present in E. coli, our synthetic system requires only the expression of Ler and a transgene
-    under the control of LEE5. We analyzed the expression of gfp under the control of LEE5 promoter as proof of concept.
+    Since H-NS is naturally present in <i>E. coli</i>, our synthetic system requires only the expression of Ler and a
+    transgene
+    under the control of <i>LEE5</i>. We analyzed the expression of <i>gfp</i> under the control of <i>LEE5</i> promoter as
+    proof of concept.
     The resulting population was heterogeneous regarding GFP expression since one sub-population expressed GFP and the
     other didn’t (Figure 9).
 
   </p>
 
-  <mat-card class="eatintotextmargin">
-    <div class="mat-caption captionafterapicture">Figure :
-      <br>
-      <div class="captionmaterialmethod">
 
+  <mat-card class="eatintotextmargin" style="overflow: auto;">
+    <div class="centerstuff semiwideimg">
+      <img src="http://2018.igem.org/wiki/images/f/f6/T--GO_Paris-Saclay--heterogeneity_example.png" class="wideimg">
+    </div>
+    <div class="mat-caption captionafterapicture">Figure 9: ‘HeteroGenious’ GFP expression using <i>LEE5</i> and Ler
+      BioBricks
+      <br><br>
+      <div class="captionmaterialmethod">
+        <mat-list>
+          <mat-list-item>
+            <mat-icon mat-list-icon>filter_1</mat-icon>
+            <h4 mat-line>Fluorescent microscopy of <i>E. coli</i> K12 MG1655Z1 harboring pSB1C3-LEE5_GFP_native
+              (BBa_K2688012)</h4>
+            <p mat-line> Bacteria were cultured in LB at 37°C during 24h.</p>
+          </mat-list-item>
+          <mat-list-item>
+            <mat-icon mat-list-icon>filter_2</mat-icon>
+            <h4 mat-line>Cytometry analysis of <i>E. coli</i> K12 MG1655Z1 harboring pSB1C3-tet-Ler1 and an integrated
+              LEE5-<i>gfp</i> expression cassette</h4>
+            <p mat-line>Bacteria were cultured in LB containing 50 ng/ml anhydrotetracyclin at 37°C during 24h.</p>
+          </mat-list-item>
+        </mat-list>
       </div>
     </div>
   </mat-card>
 
+  <p>
+    Depending on which protein (H-NS or LER) cooperatively binds to the <i>LEE5</i> promoter, <i>gfp</i> expression is
+    silenced or activated.
+    Using this interesting property, several possibilities are opened for application to our project. Instead of <i>gfp</i>
+    transgene,
+    <i>cpg2</i> and <i>folC</i> encoding genes could be clones in operon under the control of <i>LEE5</i>. This way,
+    part of the population will not
+    express the MTX-degradation pathway and therefosre will ensure cell renewal in the bioreactor. This illustrates the
+    concept of
+    ‘division of labor’ between ‘cleaning’ and ‘stem-like’ bacteria. All together, we can combine the degradation
+    pathway with our
+    heterogeneous expression device to achieve efficient degradation and long-term maintenance of the ‘Cleaning
+    Factory’.
+  </p>
+
+
+  <div class="formoredetailssee">For more details on parts characterization & experiments, see the <a
+    (click)="this.router.navigate(['/biology/lee5'], { fragment: 'top'})">LEE5 part page</a> & <a
+    (click)="this.router.navigate(['/biology/ler'], { fragment: 'top'})">Ler part page</a></div>
+
+  <p class="spacemaker"></p>
 </mat-card>
