--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -14,7 +14,7 @@
 
     <mat-card-header>
       <mat-card-title>Carboxypeptidase G2</mat-card-title>
-      <mat-card-subtitle>cpg2 &mdash; BBa_K2688003</mat-card-subtitle>
+      <mat-card-subtitle><i>cpg2</i> &mdash; BBa_K2688003</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>An enzyme that cleaves folates, yielding a pterydoyl ring and glutamate(s).</mat-card-content>
     <mat-card-actions>
@@ -26,7 +26,7 @@
   <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
     <mat-card-header>
       <mat-card-title>FolylPolyGlutamate Synthetase</mat-card-title>
-      <mat-card-subtitle>folC &mdash; BBa_K2688008</mat-card-subtitle>
+      <mat-card-subtitle><i>folC</i> &mdash; BBa_K2688008</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>An enzyme that adds glutamates to folate analogs.</mat-card-content>
     <mat-card-actions>
@@ -85,7 +85,7 @@
       <mat-card-title>LEE5 promoter series</mat-card-title>
       <mat-card-subtitle>LEE5 &mdash; BBa_K2688010 to BBa_K2688018</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and ler, which allows for
+    <mat-card-content>A constitutive promoter regulated by H-NS (E coli endogeneous) and Ler, which allows for
       heterogeneous expression
       of downstream gene. Several variants are available, with design implications.
     </mat-card-content>
@@ -103,7 +103,7 @@
   <mat-card (mouseenter)='mouseenter($event)' (mouseleave)="mouseleave($event)" class="z-depth" class="part-card">
     <mat-card-header>
       <mat-card-title>Ler regulator series</mat-card-title>
-      <mat-card-subtitle>ler &mdash; BBa_K2688019 to BBa_K2688021</mat-card-subtitle>
+      <mat-card-subtitle><i>ler</i> &mdash; BBa_K2688019 to BBa_K2688021</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>A transcription regulator protein that binds to LEE5 promoter sites, counteracting H-NS silecing
       and allowing transcription.
